# lib/api-spec/openapi.yaml
@@ -1985,6 +1985,12 @@ components:
           type: string
         readStatus:
           type: boolean
+        entityType:
+          type: string
+          nullable: true
+        entityId:
+          type: string
+          nullable: true
         createdAt:
           type: string
           format: date-time
